Fix strangeness with page jumping around when hovering nav links

--- a/src/_includes/assets/css/components.header.css
+++ b/src/_includes/assets/css/components.header.css
@@ -3,7 +3,7 @@
 .header--panel {
   margin-bottom: 1.625rem;
   padding-bottom: 1rem;
-  padding-top: 1rem;
+  padding-top: 1.5rem;
 }
 
 .header--desktop,
@@ -48,7 +48,6 @@
 .nav__link {
   border: none;
   color: var(--color-grey-dark);
-  display: inline-block;
   padding: 0.5rem 1.25rem;
 }
 
